fix: updated not working chatMixinEvents
Signed-off-by: Fireflasher <fireflasher@proton.me>